@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20231221
+;; Version:    20231223
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://anggtwu.net/eev-current/eev-intro.el>
@@ -10454,13 +10454,93 @@ add these lines to your ~/.emacs:
 
 
 
-
 5. Debugging the meat
 =====================
-TODO: explain `M-x tt' and `M-x tt0',
-and explain which parts this video they replace:
+This video, from 2021,
 
   (find-1stclassvideo-links \"2021ffll\")
+
+explains how to use `find-find-links-links-new', but from about
+36:00 onwards it explains how to debug `find-*-links' functions
+using a method that was horribly complex. In 2021 I didn't know
+how to use `C-M-x' (`eval-defun') -
+
+  (find-enode \"Lisp Eval\" \"C-M-x\" \"containing or following point\")
+
+to evaluate the defun around point; `C-M-x' makes everything much
+simpler.
+
+Let's see an example. Run this
+
+  (find-find-links-links-new \"mytaskC\" \"foo bar\" \"\")
+
+to create an adjusted skeleton in a temporary buffer; change its
+meat to:
+
+  _{foo}_{bar}_
+
+and type `C-M-x'. The meat is inside the defun for
+`find-mytaskC-links', so running `C-M-x' will redefine
+`find-mytaskC-links'.
+
+Suppose that we want to edit its meat and check the result of two
+tests after every few keystrokes. Suppose that our two tests are
+these ones,
+
+  (find-mytaskC-links)
+  (find-mytaskC-links \"FOO\" \"BAR\")
+
+or rather these ones - try them:
+
+  (find-2a nil '(find-mytaskC-links))
+  (find-2a nil '(find-mytaskC-links \"FOO\" \"BAR\"))
+
+the `find-2a's will make their temporary buffers be shown at the
+window at the right, and in the first test the \"{foo}\" and the
+\"{bar}\" will be kept unchanged, and in the second test they
+will become \"FOO\" and \"BAR\".
+
+The temporary buffer generated by
+
+  (find-find-links-links-new \"mytaskC\" \"foo bar\" \"\")
+
+has three defuns like these ones at its bottom:
+
+  (defun ee-template-test (&rest args)
+    (let ((ee-buffer-name \"*ee-template-test*\"))
+      (find-2a nil `(find-mytaskC-links ,@args))))
+
+  (defun tt0 () (interactive) (eek \"C-M-x\") (ee-template-test))
+  (defun tt  () (interactive) (eek \"C-M-x\") (ee-template-test \"A\" \"B\"))
+
+Eval each of these three defuns with `M-e'. The last two are
+meant to be run from inside the
+
+  (defun find-mytaskC-links ...)
+
+with `M-x tt0' and `M-x tt'; let's see how. Generate this
+temporary buffer again,
+ 
+  (find-find-links-links-new \"mytaskC\" \"foo bar\" \"\")
+
+and edit the meat of `find-mytaskC-links' to make it this again:
+
+  _{foo}_{bar}_
+
+Then type `M-x tt0' and `M-x tt' while still inside the defun -
+`M-x tt0' will reevalute `find-mytaskC-links' and show the result
+of the first test in the window at the right, and `M-x tt0' will
+reevalute `find-mytaskC-links' and show the result of the second
+test in the window at the right. Then edit the meat a bit, and
+try `M-x tt0' and `M-x tt' again. TA-DAA! =)
+
+Note that we did everything in this example using only temporary
+buffers. Now try to do something similar copying your working
+version of `find-mytaskC-links' to a file in emacs-lisp-mode - I
+usually use the file \"~/elisp/test.el\" for this kind of draft
+code, and I only move the defuns of my new `find-*-links'
+functions to other files after they become minimally useful.
+
 
 
 
